// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineFunctions.vue Functions kept 1`] = `
<div>
  <h1 title="function () {
        return true;
      }">Classic</h1>
  <h2 title="function named() {
        return true;
      }">Multi-line</h2>
  <h3 title="function (x) {
        return !x;
      }">Arrow 1</h3>
  <h3 title="function (x) {
        return !x;
      }">Arrow 2</h3>
  <h3 title="function () {
        return true;
      }">Arrow 3</h3>
  <h3 title="function (x, y) {
        return x + y;
      }">Arrow 4</h3>
  <h4 title="function () { [native code] }">Reference</h4>
  <h5 title="2">Run</h5>
  <h6 title="function (a word used in programming) is typically followed by curly braces, ie {}">Red herring</h6>
  <div><pre>      function notInAnAttribute (a, b, c) {
        const d = a * c;
        const e = d - b;
        return e;
      }
    </pre>
  </div>
  <div title="this is what a it looks like function () {}">
    Attribute does not start with function.
  </div>
  <div title="function () {} is what it looks like">
    Attribute does not end with }.
  </div>
  <p title="function () { [native code] },function () { [native code] }">In array</p>
</div>
`;

exports[`InlineFunctions.vue Functions removed 1`] = `
<div>
  <h1 title="[function]">Classic</h1>
  <h2 title="[function]">Multi-line</h2>
  <h3 title="[function]">Arrow 1</h3>
  <h3 title="[function]">Arrow 2</h3>
  <h3 title="[function]">Arrow 3</h3>
  <h3 title="[function]">Arrow 4</h3>
  <h4 title="[function]">Reference</h4>
  <h5 title="2">Run</h5>
  <h6 title="function (a word used in programming) is typically followed by curly braces, ie {}">Red herring</h6>
  <div><pre>      function notInAnAttribute (a, b, c) {
        const d = a * c;
        const e = d - b;
        return e;
      }
    </pre>
  </div>
  <div title="this is what a it looks like function () {}">
    Attribute does not start with function.
  </div>
  <div title="function () {} is what it looks like">
    Attribute does not end with }.
  </div>
  <p title="[function]">In array</p>
</div>
`;
